...
                                <connections>
                                    <action selector="didTapMenu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IdH-cg-we8"/>
                                </connections>
                            </button>
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem image="pencil" catalog="system" style="plain" id="WzK-2U-hjI">
                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="kTc-Kv-SI8">
                                    <rect key="frame" x="369" y="9.6666666666666643" width="25" height="25"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <color key="tintColor" red="1" green="0.14901960784313725" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                    <state key="normal" image="pencil" catalog="system">
                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="70" id="E7W-PB-XnC"/>
                                    <constraint firstAttribute="height" constant="50" id="QWk-J5-G37"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
                                <state key="normal" title="next">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="8Ce-mU-xnc" kind="presentation" id="C2f-nj-sQY"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="69k-z2-Mg0"/>
                                    <constraint firstAttribute="width" constant="80" id="XuP-7F-mCY"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
                                <state key="normal" title="previous">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="zId-34-F8s" kind="presentation" id="tKP-uE-mI6"/>
                                </connections>
                            </button>
...
