...

    override func viewDidLoad() {
        super.viewDidLoad()
        nextTCButton.alpha = 0.0
        
        //Hier den Title ändern
        menuBar.title = "Hier dein Title"
        
        let rightSwipe = UISwipeGestureRecognizer(target: self, action: #selector(handleSwipe(sender:)))
        self.view.addGestureRecognizer(rightSwipe)
    }
    
    @IBAction func didTapMenu(_ sender: Any) {
...
