//
//  SlideInTransitionUITests.swift
//  SlideInTransitionUITests
//
//  Created by Paula Engelberg on 2020/07/24.
//  Copyright © 2020 Gary Tokman. All rights reserved.
//

import XCTest

class SlideInTransitionUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testOpenCloseDrawer() throws {
        
        let app = XCUIApplication()
        app.launch()
        
        let nrSwipes = 3
        for i in 1 ..< nrSwipes {
            if i == 1 {
                sleep(3)
                app.swipeRight()
                sleep(3)
                app.tap()
                sleep(3)
            } else {
                app.swipeRight()
                sleep(3)
                app.tap()
                sleep(3)
            }
        }
        sleep(3)
    }
       
    func testSwitchPages() throws {
        let app = XCUIApplication()
        app.launch()
        sleep(2)
        app.navigationBars["Hier dein Title"].buttons["edit"].tap()
      
        sleep(3)
        app.buttons["next"].tap()
        sleep(4)
        app.buttons["previous"].tap()
        sleep(4)
        app.buttons["next"].tap()
        sleep(4)
    }
       
    func testSwipeList() throws{
        let app = XCUIApplication()
        app.launch()
           
        app.navigationBars["Hier dein Title"].buttons["edit"].tap()
        app.navigationBars.buttons["edit"].tap()
        
        app.swipeUp()
        app.swipeUp()
        app.swipeUp()
    }
    
    

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
}

//measure(metrics: [XCTClockMetric(), // to measure time
//                        XCTCPUMetric(), // to measure cpu cycles
//                      XCTStorageMetric(), // to measure storage consuming
//                    XCTMemoryMetric()]) { // to measeure RAM consuming
//}
